# abstract_VM

./: CMakeLists.txt  Double.cpp  Double.hpp  Float.cpp  Float.hpp  IOperand.hpp  Instruction.cpp  Instruction.hpp  Int16.cpp  Int16.hpp  Int32.cpp  Int32.hpp  Int8.cpp  Int8.hpp  OpDouble.cpp  OpDouble.hpp  OpFloat.cpp  OpFloat.hpp  OpInt16.cpp  OpInt16.hpp  OpInt32.cpp  OpInt32.hpp  OpInt8.cpp  OpInt8.hpp  OperandFactory.cpp  OperandFactory.hpp  README.md  createOperand.cpp  main.cpp  test  test.cpp  test2  test3
